[gd_scene load_steps=3 format=3 uid="uid://gclnpuvxbwr4"]

[ext_resource type="Script" path="res://Components/PartyDisplay.gd" id="1_er4gt"]
[ext_resource type="PackedScene" uid="uid://be3xs3yc68qvm" path="res://Components/PokemonDisplay.tscn" id="1_td5va"]

[node name="PartyDisplay" type="Node2D"]
script = ExtResource("1_er4gt")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 538.0
offset_bottom = 380.0
color = Color(0, 0.0392157, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = 186.0
offset_top = -1.0
offset_right = 296.0
offset_bottom = 22.0
text = "Current Party:"

[node name="pkmn1" parent="." instance=ExtResource("1_td5va")]
position = Vector2(0, 27)

[node name="pkmn2" parent="." instance=ExtResource("1_td5va")]
position = Vector2(274, 31)

[node name="pkmn3" parent="." instance=ExtResource("1_td5va")]
position = Vector2(-5, 147)

[node name="pkmn4" parent="." instance=ExtResource("1_td5va")]
position = Vector2(274, 152)

[node name="pkmn5" parent="." instance=ExtResource("1_td5va")]
position = Vector2(-1, 277)

[node name="pkmn6" parent="." instance=ExtResource("1_td5va")]
position = Vector2(273, 259)
